<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MenuActivity">


    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/homeButton"
        android:textColor="#FAFFFFFF" />
    <Button
        android:id="@+id/seeAllFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/seeAllFriends"
        android:layout_alignParentRight="true"
        android:textColor="#FAFFFFFF" />

    <EditText
        android:id="@+id/enterUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterEmail"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/addUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterUserEmail"
        android:text="@string/addUser" />

    <ListView
        android:id="@+id/friendsList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addUser"
        android:layout_marginTop="-3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</RelativeLayout>