<?xml version="1.0" encoding="utf-8"?>




<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MapsActivity" >



    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MapsActivity" />


    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="15dp"
        android:background="#A8050505">

        <Button
            android:id="@+id/menuButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:text="@string/menuButton"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/getLocation"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:text="@string/getLocation"
            android:textColorLink="#2B2B2B" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:text="@string/button3"
            android:textColor="#F8FFFFFF" />

    </TableRow>

    <Button
        android:id="@+id/Start_GeoFence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create GeoFence" />


</FrameLayout>